--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,4 @@
 <link
-  href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900"
+  href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto:400,500,700,900"
   rel="stylesheet"
 />
